# SMIT_task

./: README.md  pyproject.toml
app/: .env.example  Dockerfile  main.py  pyproject.toml  settings.py  start.sh
app/api/: handlers.py  models.py  schemas.py
app/migrations/models/: 3_20230717190129_None.py
app/tests/: conftest.py  test_handlers.py  test_script.py
app/upload_data/: data.json  script.py
infra/: docker-compose.yaml
